# jobHuntApi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: company_screen.py  contact_me.py  lib_common.py  lib_component.py  lib_halal_analysis.py  settings.py
