[tool.poetry]
name = "job-search-tool"
version = "1.1.0"
description = "A Streamlit application for screening and listing top companies based on various financial metrics."
authors = ["Mohammad Alfi Hasan <mdalfihasan19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.12.0"
pandas = "^1.4.2"
streamlit-antd-components = "^0.1.2"
streamlit-lottie = "^0.0.3"
st-aggrid = "^0.3.2"
altair = "^4.2.0"
vega-datasets = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
